# api

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  clippy.toml  config.example.toml  database_schema.sql  go.mod  main.go  member.py
.github/workflows/: build.yml
api/: common.go  v1.go
api-derive/: Cargo.toml
api-derive/src/: lib.rs
api-impl/: Cargo.toml
api-impl/src/: lib.rs
barebones/: README.md  index.html  rest.js  style.css
byond/: byond.go
config/: config.example.yaml  config.go
db/: db.go
src/: byond.rs  cache.rs  config.rs  main.rs  route.rs  sqlxext.rs
src/byond/: mod.rs  status.rs  topic.rs
src/database/: ban.rs  error.rs  events.rs  lookup.rs  mod.rs  player.rs  recent_test_merges.rs  roletime.rs  round.rs  state.rs  verification.rs  verify.rs
src/http/: byond.rs  discord.rs  error.rs  mod.rs
src/route/: index.rs  mod.rs  recent_test_merges.rs  stoplight-elements.html  v3.rs
src/route/v3/: ban.rs  lookup.rs  mod.rs  patreon.rs  player.rs  recent_test_merges.rs  roletime.rs  server.rs  verify.rs
src/routes/v2/: autocomplete.rs  ban.rs  events.rs  mod.rs  player.rs  round.rs
