[package]
name = "api-rewrite"
version = "0.1.0"
edition = "2024"

[dependencies]
api-derive = { path = "api-derive" }
once_cell = "1.21.3"
poem = "3.1.12"
serde = "1.0.219"
serde_json = "1.0.141"
serde_repr = "0.1.20"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
