[package]
name = "api-rewrite"
version = "3.0.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
once_cell = "1.21.3"
poem = "3.1.12"
poem-openapi = { version = "5.1.16" }
serde = "1.0.219"
serde_json = "1.0.141"
serde_repr = "0.1.20"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
urlencoding = "2.1.3"
