[package]
name = "api-rewrite"
version = "3.0.0"
edition = "2024"

[dependencies]
color-eyre = { version = "0.6.5", default-features = false }
const_format = "0.2.34"
futures = "0.3.31"
once_cell = "1.21.3"
poem = "3.1.12"
poem-openapi = { version = "5.1.16" }
reqwest = { version = "0.13.1" }
serde = "1.0.219"
serde_json = "1.0.141"
serde_repr = "0.1.20"
# Pin to 0.7.4 due to https://github.com/launchbadge/sqlx/issues/3387
sqlx = { version = "0.7.4", features = ["runtime-tokio", "mysql", "chrono"] }
subtle = "2.6.1"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
urlencoding = "2.1.3"
